Java 25, support logging, and fixes found in the logging review (#328)
* Build on Java 25 and take the Spring Boot BOM from the plugin version

Dependabot bumps the org.springframework.boot plugin but never touched the
separate springBootVersion BOM string, so the runtime libraries were stuck on
4.0.6 while the plugin was 4.1.1. The BOM now comes from the plugin.

Also points Dependabot's docker updates at the real Dockerfiles, loads the
Mockito agent explicitly, and adds rewrite-migrate-java.

* Engine: keep HTTP status, fail runs loudly, atomic image writes, clearer logs

- Non-2xx image fetches throw HttpStatusException, and results carry the
  status into retrieval records; failures are filed by kind instead of all
  COMIC_UNAVAILABLE
- A failed daily download run now fails the batch step instead of finishing
  COMPLETED; backfill errors are counted as failures instead of vanishing as
  filtered items; updateComic/updateAllComics return false on failure
- Strip and avatar files are written atomically
- Indexed latest-strip downloads handle 429 like the other paths
- Download pool threads keep the batch MDC, and every comic carries
  comic/date MDC keys
- Exceptions are passed to the logger, expected failures log one line, and
  hot-path INFO lines move to DEBUG
- Java 25 idioms: pattern and record-pattern switches, unnamed variables

* API: request ids, compact traces, startup summary, safer config reads

- Every request gets an X-Request-Id and one completion line (method, path,
  GraphQL operation, status, time, client, user); the log context
  [req= user= op= job= comic= date=] is printed on console and batch logs
- Stack traces are compact (12 frames per cause) on console and batch logs;
  expected failures (rejected JWTs, 404s, bad input) log one line
- Startup summary: version, Java, profiles, paths, jobs, source pacing
- Reading users/preferences/comics config never falls back to an empty
  config on a read error, so a save can no longer wipe the file; co